# DetectiveGame

./: .gitignore
projects/: CMakeLists.txt
projects/engine/src/Camera/: camera.cpp  camera.hpp  camera_factory.hpp  camera_interface.hpp  controlled_camera.cpp  controlled_camera.hpp  static_camera.cpp  static_camera.hpp
projects/engine/src/Model/: mesh.cpp  mesh.hpp  mirror.cpp  mirror.hpp  model.cpp  model.hpp  scene_model.cpp  scene_model.hpp  skybox.cpp  skybox.hpp
projects/engine/src/Shaders/: pbr_shader.cpp  pbr_shader.hpp  shader.cpp  shader.hpp  shader_collection.cpp  shader_collection.hpp  shader_operations.cpp  shader_operations.hpp
projects/engine/src/Shaders/core/: back_shader.frag  back_shader.vs  brdf_shader.frag  brdf_shader.vs  cubemap_shader.vs  equirectangular_to_cubemap_shader.frag  irradiance_convolution.frag  mirror_shader.frag  mirror_shader.vs  pbr_shader.frag  pbr_shader.vs  prefilter_shader.frag  simple_model_shader.frag  simple_model_shader.vs
projects/engine/src/common/: lights.hpp  object_interface.hpp  scene_object_interface.hpp  vertices.cpp  vertices.hpp  vertices_interface.hpp
projects/engine/src/scene/: scene.hpp  scene_interface.hpp
projects/engine/src/textures/: cubemap.cpp  cubemap.hpp  texture.cpp  texture.hpp
projects/engine/src/tools/: pbr_builder.cpp  pbr_builder.hpp
projects/engine/src/windows/: window_controller.cpp  window_controller.hpp  window_controller_interface.hpp
projects/sandbox/src/: main.cpp  sandbox_view.cpp  sandbox_view.hpp
